chore(claude): 更新工作记忆
更新当前任务状态。